<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NMedia</string>
    <string name="likes">183</string>
    <string name="share">999</string>
    <string name="views">863</string>
    <string name="post_text">Post Text</string>
    <string name="empty_content">Content can\'t be empty</string>
    <string name="app_not_found" translatable="false">Приложение не найдено"</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_share">User %1$s share %2$s\'s post</string>
    <string name="notification_user_post_title">%1$s published a new post:</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="error_saving">Saving failed. Try again later</string>
    <string name="latest_news">Latest news</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter">Enter</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="userName">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="user_avatar">Avatar</string>
    <string name="enter_button">Enter</string>
    <string name="register_button">Register</string>
    <string name="fields_are_not_the_same">The password and confirm password fields are not the same</string>
    <string name="cancel_button">Cancel</string>
    <string name="empty_field">The field cannot be empty</string>
    <string name="invalid_user">Invalid username or password</string>
    <string name="cancelation">Are you sure you want to get out?</string>
    <string name="dialog_positive" translatable="false">OK</string>
    <string name="dialog_negative" tools:ignore="ButtonCase">CANCEL</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="long_time_ago">Long time ago</string>
</resources>