<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/enter"
        android:textAppearance="@style/title_style"
        android:lineSpacingExtra="2sp"
        android:translationY="-0.76sp"
        android:gravity="center_horizontal|top"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="118dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:lineSpacingExtra="5sp"
        android:gravity="center_vertical"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="182dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:lineSpacingExtra="5sp"
        android:gravity="center_vertical"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/enterButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/enter_button"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="44dp"
        android:layout_marginTop="82dp"
        android:gravity="center_horizontal|center_vertical"
        style="@style/enter_button_style"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/cancel_button"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="82dp"
        android:gravity="center_horizontal|center_vertical"
        style="@style/enter_button_style"
        />

</androidx.constraintlayout.widget.ConstraintLayout>