<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/registration"
        android:textAppearance="@style/title_style"
        android:lineSpacingExtra="2sp"
        android:translationY="-0.76sp"
        android:gravity="center_horizontal|top"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration"
        android:layout_height="0dp"
        android:lineSpacingExtra="5sp"
        android:gravity="center_vertical"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="94dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration"
        android:layout_height="0dp"
        android:lineSpacingExtra="5sp"
        android:gravity="center_vertical"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="158dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration"
        android:layout_height="0dp"
        android:lineSpacingExtra="5sp"
        android:gravity="center_vertical"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="222dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration"
        android:layout_height="0dp"
        android:lineSpacingExtra="5sp"
        android:gravity="center_vertical"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userAvatar"
        android:layout_width="match_parent"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="286dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration"
        android:layout_height="0dp"
        android:lineSpacingExtra="5sp"
        android:gravity="center_vertical"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_avatar"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/register_button"
        app:layout_constraintTop_toBottomOf="@id/userAvatar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="44dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal|center_vertical"
        style="@style/enter_button_style"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/cancel_button"
        app:layout_constraintTop_toBottomOf="@id/userAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal|center_vertical"
        style="@style/enter_button_style"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setAvatar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/userAvatar"
        app:layout_constraintEnd_toEndOf="@+id/userAvatar"
        app:icon="@drawable/ic_baseline_more_horiz_24"
        android:layout_margin="2dp"
        android:background="@android:color/transparent"
        style="@style/defaultButtonTheme">
    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>