<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/postAvatar"
        android:layout_width="@dimen/avatarSize"
        android:layout_height="@dimen/avatarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/postAvatar" />

    <ImageView
        android:id="@+id/postMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing"
        android:layout_marginEnd="@dimen/spacing"
        android:ellipsize="end"
        android:singleLine="true"
        tools:text="@sample/posts.json/data/author"
        app:layout_constraintEnd_toStartOf="@+id/postMenu"
        app:layout_constraintStart_toEndOf="@+id/postAvatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@sample/posts.json/data/published"
        android:layout_marginStart="@dimen/spacing"
        app:layout_constraintStart_toEndOf="@+id/postAvatar"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintBottom_toTopOf="@+id/barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="postAvatar, postMenu, userName, published" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="postAvatar, postMenu, userName, published, content" />

    <TextView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/views"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        android:paddingStart="8dp"
        android:layout_marginTop="@dimen/spacing"/>

    <ImageView
        android:id="@+id/visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@id/views"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        android:layout_marginTop="@dimen/spacing"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:srcCompat="@drawable/ic_baseline_visibility_24" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/halfSpacing"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/likes"
        app:layout_constraintStart_toEndOf="@id/favorite"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom" />

    <ImageView
        android:id="@+id/shareImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        android:paddingStart="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"
        app:srcCompat="@drawable/ic_baseline_share_24" />

    <TextView
        android:id="@+id/shareTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/shareImg"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        android:paddingStart="@dimen/halfSpacing"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/share" />

</androidx.constraintlayout.widget.ConstraintLayout>